# Website

./: README.md  app.py  pyproject.toml  render.yaml  requirements.txt
static/css/: style.css
static/js/: main.js
templates/: about.html  base.html  home.html  journal.html  team.html
