[tool.poetry]
name = "pakde-flask-app"
version = "0.1.0"
description = "Flask web app for Parkinson Detector (PakDe)"
authors = ["Your Name <your@email.com>"]

[tool.poetry.dependencies]
python = "3.10.13"
flask = "2.0.1"
tensorflow = "2.12.0"
pillow = "9.0.1"
numpy = "1.22.3"
gunicorn = "20.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
